wtmp: split out the platform-specific bits

The logic for how to begin the iteration of the wtmp file is
platform-specific.  Split out.

https://bugs.freedesktop.org/show_bug.cgi?id=75938